projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/sum_rejects_non_iterable_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "sum_rejects_non_iterable_argument"
# subject = "sum"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""sum: sum_rejects_non_iterable_argument (errors)."""
try:
    result = sum(1)
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
